Fix handling of genome information.
Surprisingly the setter genomes()<- works with a DNAStringSet object,
but then getter genome() returns NAs.  The workaround I found is
to extract the values directly from the metadata slot.  I can not try
the latest version of Bioconductor as I am not ready for an upgrade.

--- a/vignettes/PWM.Rmd
+++ b/vignettes/PWM.Rmd
@@ -53,7 +53,7 @@ documentation states:
 # Pass genome information through metadata
 getSeq_ <- function(x) {
   seqs <- getSeq(x)
-  metadata(seqs)$genome <- unique(genome(x))
+  genome(seqs) <- unique(genome(x))
   seqs
 }
 
@@ -61,7 +61,7 @@ getSeq_ <- function(x) {
 # Slow !
 doGadem <- function(seqs) {
   seqs <- seqs[width(seqs) < 48000]
-  bsgenome_name <- metadata(seqs)$genome
+  bsgenome_name <- genome(seqs@metadata$seqinfo) |> unique()
   bsgenome_obj <- BSgenome::getBSgenome(bsgenome_name)
   GADEM(seqs, verbose=1, genome=bsgenome_obj)
 }
