Link to ParallelPlots vignette

--- a/vignettes/ColinearityInterruptors.Rmd
+++ b/vignettes/ColinearityInterruptors.Rmd
@@ -69,6 +69,8 @@ coa$Oki_Kum |> plyranges::filter(seqnames == "chr1", seqnames(query)!="contig_3_
 coa$Oki_Kum |> plotApairOfChrs(chrQ = "contig_27_1")
 ```
 
+The assembly is continued in details in `vignette("ParallelPlots", package = "OikScrambling")`
+
 # Alignments are real (Region of Interest 1)
 
 When an alignment interrupts colinearity, is it trustable ?
